<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simple_calc.xarichar.calculator.MainActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="@string/operand_1_Text"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="29dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="@string/operand_2_Text"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="91dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="161dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="@string/result_Text"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="375dp" />

    <Button
        android:id="@+id/addbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_Text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="180dp" />

    <Button
        android:id="@+id/subtractbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtract_Text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="247dp" />

    <Button
        android:id="@+id/multiplybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply_Text"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="180dp" />

    <Button
        android:id="@+id/dividebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide_Text"
        tools:layout_editor_absoluteX="278dp"
        tools:layout_editor_absoluteY="180dp" />

    <Button
        android:id="@+id/sqrtbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqrt_Text"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="247dp" />

    <Button
        android:id="@+id/powerbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power_Text"
        tools:layout_editor_absoluteX="278dp"
        tools:layout_editor_absoluteY="247dp" />

    <Button
        android:id="@+id/clearbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_Text"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="375dp" />

</android.support.constraint.ConstraintLayout>
